--- a/cs/zaver.tex
+++ b/cs/zaver.tex
@@ -68,8 +68,7 @@ Velmi silnou stránkou \acl{KCD} je rovněž \textbf{vizuální prezentace}. Dí
 Naše práce ověřila, že za použití moderního fyzikálního systému, jakým je ten vestavěný v enginu Unity, je velmi dobře možné implementovat akční hru s mečem, která hráči poskytne nad zbraní jemnou kontrolu ve všech šesti stupních volnosti. Jádro takové hry jsme implementovali a může posloužit jako základ pro plnohodnotnou komerční hru či jako výchozí bod pro další výzkum v této oblasti.
 
 
-TODO: dopsat zbytek sekce!
-%Naše implementace zahrnuje hráčem ovladatelného šermíře, který je schopen se pohybovat po terénu. Třímá meč, se kterým je schopen volně pohybovat a používat ho k interakci s dalšími fyzikálně simulovanými objekty - např. nepřáteli.
+
 
 \section{Možnosti rozšíření}
 
@@ -81,7 +80,10 @@ TODO: dopsat zbytek sekce!
     \item \textbf{Přepracování IRayIntersectable} - v procesu mapování uživatelského vstupu na pohyb meče je nejprve třeba z paprsku vystřeleného z polohy hráčova kurzoru získat kontrolní bod. Toho dosahujeme průnikem paprsku s geometrickým útvarem. Současný systém (viz \ref{rayIntersectablesDefinitionSubsection}) umožňuje definovat tyto útvary vcelku flexibilně, ale nese neduhy v podobě špatných možností vizualizace a značné míry ručního ladění potřebné k dosažení dobrého výsledku. Rovněž chybí editor, s jehož pomocí by tyto útvary mohl editovat hráč uvnitř hry.
     \item \textbf{Lepší ovládání pohybu postavy} - jak se zdá, precizní ovládání meče vyžaduje, aby byla myš vyhrazena plně pro něj. Ovládání pohybu postavy tedy musí vystačit s klávesnicí - přímočaré ovladací schéma, jaké naše práce použila, nevede ke zcela optimálnímu hráčskému zážitku. Stejně jako v oblasti ovládání meče je zde třeba další výzkum.
     \item \textbf{Méně výpočetně náročná korekce kolizí} - metoda (viz \ref{swordCollisionsSection}), kterou jsme použili, abychom zabránili tunelování a celkově nekorektnímu chování mečů při vzájemných kolizích, nese overhead, který roste v nejhorším případě kvadraticky s počtem mečů ve scéně. Pro umožnění hromadných bitev je třeba nalézt preciznější heuristiky, s jejichž pomocí by pomocné collidery byly poolovány a umisťovány pouze tam, kde jsou skutečně třeba.
-    \item \textbf{Sofistikovanější nepřátelská AI} - algoritmus, který jsme použili pro ovládání nepřátelských šermířů, je velmi jednoduchý a pro hráče neposkytuje značnou výzvu. Vytvořit umělou inteligenci schopnou využít plně možností, jež jí jemná kontrola nad mečem poskytuje, by mohlo být zajímavým úkolem pro další výzkum - nabízí se např. zapojení evolučních algoritmů.    
+    \item \textbf{Balancing} - je třeba provést testování na dobrovolnících a podchytit 
+    \item \textbf{Multiplayer} - umožnit vzájemný boj několika hráčů se pro náší hru jeví jako přirozený další krok.  
+    \item \textbf{Sofistikovanější nepřátelská AI} - algoritmus, který jsme použili pro ovládání nepřátelských šermířů, je velmi jednoduchý a pro hráče neposkytuje značnou výzvu. Vytvořit umělou inteligenci schopnou využít plně možností, jež jí jemná kontrola nad mečem poskytuje, by mohlo být zajímavým úkolem pro další výzkum - nabízí se např. zapojení evolučních algoritmů.
+    \item \textbf{Výzkum ohledně interakce s prostředím}
     \item \textbf{Kombinace s dalšími herními mechanikami} - mnoho her přidává svému bojovému systému dodatečnou hloubku kombinací s dalšími mechanikami jako je systém výdrže, magie či \acs{RPG} progrese.
     \item \textbf{Rozšíření na hru plné velikosti} - jádro, které jsme vytvořili, je třeba doplnit dalšími ortogonálními mechanikami, přidat zajímavé nepřátele, narativ a level design, aby bylo dosaženo hry, která naplní standardy komerčního herního trhu. 
 \end{itemize}
