--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -17,6 +17,10 @@
   title = {Math.NET Numerics},
   url = {https://numerics.mathdotnet.com/},
 }
+@software{ThisGithubRepo,
+  title = {Github repozitoř tohoto projektu},
+  url = {https://github.com/MarkusSecundus/PhysicsSwordfight},
+}
 
 @software{SubclassPropertyDrawer,
   author = {{lordconstant}},
