--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -1,4 +1,4 @@
-\chapter{Návrh}
+\chapter{Návrh} \label{interfacesChapter}
 
 Nyní by již čtenář měl být seznámen s cílem naší práce i s nástroji, které k jeho dosažení hodláme použít. Přistupme tedy k návrhu našeho řešení.
 
