--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -1,4 +1,4 @@
-\chapter{Implementace}
+\chapter{Implementace} \label{implementationChapter}
 
 V předchozí kapitole jsme navrhli strukturu, které se náš projekt bude držet. Stejně tak již víme, jakým způsobem bude se systémem interagovat hráč. Nyní můžeme přistoupit k jeho implementaci.
 
