--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -115,7 +115,10 @@
 % Nepovinné poděkování (vedoucímu práce, konzultantovi, tomu, kdo
 % zapůjčil software, literaturu apod.)
 \def\Podekovani{%
-Poděkování.
+Rad bych poděkoval svému vedoucímu Mgr. Vojtěchu Černému za jeho trpělivost, mnoho cenných rad a podnětů, bez kterých by práce nemohla vzniknout.
+Dále rodině a přátelům, kteří mi po celou dobu poskytovali duševní podporu.
+
+Specificky rovněž kamarádům, kteří mě kdysi přivedli k LARPu, z čehož vzešla inspirace pro téma této práce.
 }
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
@@ -126,7 +129,7 @@ Práce implementuje simulátor šermu s jedenapůlručním mečem v enginu Unity
 Implementace je vytvořena s použitím dobrých programátorských praktik a může komukoliv posloužit jako základ pro akční hru s pokročilým bojovým systémem.
 }
 \def\AbstraktEN{%
-Combat with a cold weapon can be seen in many video games, but rarely does it attempt a realistic simulation that gives the player freedom approaching that which cold weapon manipulation allows in the real world. Big challenge is designing a control scheme for classic computer peripherals. An even less explored area is the integration of the weapon into the physics simulation of the game world.
+Combat with a cold weapon can be seen in many video games, but rarely does it attempt a realistic simulation that would provide the player with freedom nearing what cold weapon manipulation allows in the real world. Big challenge is designing a control scheme for classic computer peripherals. An even less explored area is the integration of the weapon into the physics simulation of the game world.
 
 This work implements a longsword fencing simulator in the Unity game engine, featuring the sword as a fully physically simulated object. It also presents a control scheme for keyboard and mouse providing the player with fine control over the movement of the weapon. It also implements a simple AI enemy for testing purposes.
 The implementation is created using good programming practices and can be used as a basis for an action game with an advanced combat system.
