--- a/cs/prehled-priloh.tex
+++ b/cs/prehled-priloh.tex
@@ -33,9 +33,8 @@
 .7 Modules - Moduly ovládání meče.
 .7 Recording - Nahrávání pohybů meče.
 .7 SwordsmanAI - Počítačem řízený šermíř.
-.2 docs.xml - vygenerovaný soubor programátorské dokumentace.
+.2 Docs - složka s vygenerovanou programátorskou dokumentací.
 .2 prace.pdf - soubor obsahující text práce ve formátu PDF/A.
 .2 LICENCE.txt - soubor obsahující licenci pro zdrojový kód a spustitelný soubor aplikace.
 .2 NOTICE.txt - soubor obsahující seznam využitých knihoven a jejich licencí.
-.2 README.txt - tento soubor.
 }
